<?xml version="1.0"?>
<package>
  <name>simulated_lidar_scanner</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS wrapper for the VTK SyntheticLidarScanner package developed by David Doria
    </p>
    <p>
      This package contains the source code from the original
      <a href="https://github.com/daviddoria/SyntheticLidarScanner"> VTK implementation </a>
      as well as libraries for wrapping that implementation with ROS interfaces.
    </p>
  </description>

  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
